--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
-  "name": "AI Pet App",
+  "name": "My AI Pet",
   "short_name": "AI Pet",
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4caf50",
+  "theme_color": "#ffffff",
+  "description": "AIペットと遊べるスマホアプリ風Webアプリ",
   "icons": [
     {
       "src": "icons/icon-192.png",
